Completing notes endpoints
